k8s-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flaky
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: flaky
  type: NodePort
