k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flaky
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: flaky
              servicePort: 80
