k8s.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: flaky
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: flaky
    spec:
      containers:
        - name: flaky
          image: ${REGISTRY}/${IMAGE}:${TAG}
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "256M"
            requests:
              memory: "128M"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            periodSeconds: 5
            initialDelaySeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            periodSeconds: 5
            initialDelaySeconds: 5
            timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: flaky
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: flaky
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flaky
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: flaky
              servicePort: 80
